syntax = "proto3";
package pb;

message Subscription {
  string ID = 1;
  string SessionID = 2;
  string Tenant = 3;
  bytes Pattern = 4;
  int32 Qos = 5;
  string Peer = 6;
  int64 LastAdded = 7;
  int64 LastDeleted = 8;
}

message SubscriptionMetadataList {
  repeated Subscription Subscriptions = 1;
}

message SubscriptionByIDInput {
  string ID = 1;
}
message SubscriptionBySessionInput {
  string SessionID = 1;
}
message SubscriptionByTopicInput {
  bytes Topic = 1;
  string Tenant = 2;
}
message SubscriptionFilterInput {}

service SubscriptionsService {
  rpc ByID(SubscriptionByIDInput) returns (Subscription);
  rpc BySession(SubscriptionBySessionInput) returns (SubscriptionMetadataList);
  rpc ByTopic(SubscriptionByTopicInput) returns (SubscriptionMetadataList);
  rpc All(SubscriptionFilterInput) returns (SubscriptionMetadataList);
}