syntax = "proto3";
package sessions;

message Metadata {
  string ID = 1;
  string Tenant = 2;
  string Peer = 3;
  bytes WillTopic = 4;
  int32 WillQoS = 5;
  bytes WillPayload = 6;
  bool WillRetain = 7;
  int64 Created = 8;
  string ClientID = 9;
  int64 LastAdded = 10;
  int64 LastDeleted = 11;
  string Transport = 12;
  string RemoteAddress = 13;
  string ClosureReason = 14;
  int32 KeepaliveInterval = 15;
}

message SessionMetadataList {
  repeated Metadata Metadatas = 1;
}

message SessionCreateInput {
  string ID = 1;
  string Tenant = 2;
  string Peer = 3;
  bytes WillTopic = 4;
  int32 WillQoS = 5;
  bytes WillPayload = 6;
  bool WillRetain = 7;
  string ClientID = 9;
  string Transport = 10;
  string RemoteAddress = 11;
  int32 KeepaliveInterval = 12;
}
message SessionCreateOutput {}

service SessionsService {
  rpc Create(SessionCreateInput) returns (SessionCreateOutput);
}

message StateTransition {
  string Kind = 1;
  StateTransitionSessionCreated SessionCreated = 2;
  StateTransitionSessionDeleted SessionDeleted = 3;
}

message StateTransitionSessionCreated {
  SessionCreateInput Input = 1;
}

message StateTransitionSessionDeleted {
  string ID = 1;
}